# texcraft

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENCE  README.md  TODO.md  codebook.toml  crash-364edeb8761a26de337642401fc136a9b7331194  empty-varchar.tfm  foo.tex  old_cargo_delete.toml  test.tex  zero-width-char.tfm
crates/boxworks/: Cargo.toml
crates/boxworks-bin/: Cargo.toml
crates/boxworks-bin/src/: box.rs
crates/boxworks-bin/tests/: README.md  alice_in_wonderland.txt  alice_in_wonderland_hlists.txt  alice_in_wonderland_hlists_hyphenated.txt  alice_in_wonderland_linebreak.txt  farewell_to_arms.txt  farewell_to_arms_linebreak_looseness.txt  hlists.rs  tests.rs  wolf_hall.txt  wolf_hall_linebreak_line_penalty.txt  wolf_hall_linebreak_right_skip.txt  wolf_hall_linebreak_vlist_penalties.txt
crates/boxworks-hyphenate/: Cargo.toml
crates/boxworks-hyphenate/src/: lib.rs
crates/boxworks-knuthplass/: Cargo.toml
crates/boxworks-knuthplass/src/: debug.rs  lib.rs
crates/boxworks-knuthplass/testdata/: README.md  alice_paragraph_1.txt  alice_paragraph_1_log.txt  alice_paragraph_1_want.txt  alice_paragraph_2.txt  alice_paragraph_2_log.txt  alice_paragraph_2_want.txt  farewell_to_arms_input.txt  farewell_to_arms_looseness_minus_1_log.txt  farewell_to_arms_looseness_minus_1_want.txt  farewell_to_arms_looseness_plus_1_log.txt  farewell_to_arms_looseness_plus_1_want.txt  wolf_hall_1in_log.txt  wolf_hall_1in_want.txt  wolf_hall_2in_log.txt  wolf_hall_2in_want.txt  wolf_hall_3in_log.txt  wolf_hall_3in_want.txt  wolf_hall_5in_log.txt  wolf_hall_5in_want.txt  wolf_hall_adj_demerits_log.txt  wolf_hall_adj_demerits_want.txt  wolf_hall_broken_penalty_log.txt  wolf_hall_broken_penalty_want.txt  wolf_hall_club_penalty_want.txt  wolf_hall_double_hyphen_demerits_log.txt  wolf_hall_double_hyphen_demerits_want.txt  wolf_hall_emergency_stretch_2_want.txt  wolf_hall_emergency_stretch_log.txt  wolf_hall_emergency_stretch_want.txt  wolf_hall_ex_hyphen_penalty_log.txt  wolf_hall_ex_hyphen_penalty_want.txt  wolf_hall_final_hyphen_demerits_log.txt  wolf_hall_final_hyphen_demerits_want.txt  wolf_hall_final_widow_penalty_want.txt  wolf_hall_hyphen_penalty_log.txt  wolf_hall_hyphen_penalty_want.txt  wolf_hall_input.txt  wolf_hall_inter_line_penalty_want.txt  wolf_hall_left_skip_log.txt  (+17 more)
crates/boxworks-lang/: Cargo.toml
crates/boxworks-lang/src/: all_errors.box  ast.rs  convert.rs  cst.rs  error.rs  lexer.rs  lib.rs  parse.rs
crates/boxworks-testing/: Cargo.toml
crates/boxworks-testing/src/: lib.rs
crates/boxworks-tex/: Cargo.toml
crates/boxworks-tex/src/: lib.rs
crates/boxworks-texlang/: Cargo.toml
crates/boxworks-texlang/src/: knuthplass.rs  lib.rs  text.rs
crates/boxworks-text/: Cargo.toml
crates/boxworks-text/src/: lib.rs
crates/boxworks/src/: .gitignore  ds.rs  hbox_template.tex  lib.rs  node.rs  tex.rs
crates/boxworks/src/lang/: all_errors.box  ast.rs  convert.rs  cst.rs  error.rs  lexer.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/hyphenate/: Cargo.toml  README.md  tmp.tex
crates/hyphenate-bin/: Cargo.toml  README.md
crates/hyphenate-bin/src/: main.rs
crates/hyphenate/src/: lib.rs
crates/performance/: Cargo.toml  README.md
crates/performance/benches/: advance.rs  advance.tex  digits_of_pi.rs  digits_of_pi.tex  lexer_throughput.rs  nested_while_loops.tex
crates/performance/src/: lib.rs
crates/playground/: .gitignore  Cargo.toml  Dockerfile  backend.go
crates/playground/src/: lib.rs
crates/playground/ui/src/: Elements.tsx
crates/texcraft/: Cargo.toml  README.md
crates/texcraft-formats/: Cargo.toml
crates/texcraft-formats/src/: lib.rs
crates/texcraft-formats/src/tfm/: mod.rs  pl.rs  tfm.rs
crates/texcraft-stdext/: Cargo.toml  README.md
crates/texcraft-stdext/src/: color.rs  lib.rs  serde_tools.rs  str.rs
crates/texcraft-stdext/src/algorithms/: mod.rs  spellcheck.rs  substringsearch.rs
crates/texcraft-stdext/src/collections/: circularbuffer.rs  (+4 more)
crates/texcraft/src/: randtex.rs  texcraft.rs
crates/texlang/: Cargo.toml  README.md
crates/texlang-common/: Cargo.toml  README.md
crates/texlang-common/src/: lib.rs
crates/texlang-core/: Cargo.toml
crates/texlang-core/src/: command.rs  driver.rs  error.rs  lib.rs  main.txt  prelude.rs  state.rs  testutil.rs  texmacro.rs  variable.rs
crates/texlang-font/: Cargo.toml
crates/texlang-font/src/: lib.rs
crates/texlang-stdlib/: Cargo.toml  README.md
crates/texlang-stdlib/src/: alias.rs  alloc.rs  catcode.rs  catcodecmd.rs  chardef.rs  codes.rs  conditional.rs  def.rs  endlinechar.rs  errormode.rs  examples.rs  execwhitespace.rs  expansion.rs  input.rs  io.rs  job.rs  letassignment.rs  lib.rs  math.rs  mathchardef.rs  prefix.rs  registers.rs  repl.rs  script.rs  sleep.rs  testing.rs  testutil.rs  texcraft.rs  the.rs  time.rs  tracing.rs  tracingmacros.rs  variableops.rs
crates/texlang-testing/: Cargo.toml
crates/texlang-testing/src/: lib.rs
crates/texlang-texttransform/: Cargo.toml
crates/texlang-texttransform/src/: lib.rs
crates/texlang/src/: lib.rs  prelude.rs  texmacro.rs  variable.rs
crates/tfm/: Cargo.toml  cmr10.new.tfm  cmr10.tfm  plan.md  pltotf_differ.py  tftopl_differ.py
crates/tfm/corpus/: README.md  ligaroo.plst
crates/tfm/fuzz/: Cargo.toml
crates/tfm/src/: deserialize.rs  format.rs  lib.rs  pl.rs  serialize.rs  tfm.rs  validate.rs
crates/typesetting/: Cargo.toml
crates/typesetting-texcraft/: Cargo.toml
crates/typesetting-texcraft/src/: lib.rs
crates/typesetting/src/: lib.rs
performance/: Cargo.toml  README.md  digits-of-pi.tex
performance/benches/: advance.rs  digits_of_pi.rs  digits_of_pi.tex  lexer_throughput.rs  primes.rs  primes.tex
performance/src/: lib.rs
playground/: Cargo.toml  Dockerfile  README.md  backend_test.go  go.mod  smoke.test.js
playground/src/: lib.rs
playground/ui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
playground/ui/src/: App.tsx  Content.tsx  Elements.tsx
playground/ui/static/: stylesheet.css
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
(+375 files in other folders)
