[package]
name = "texcraft"
version = "0.1.0"
authors = ["James Fennell <james@jpfennell.com>"]
edition = "2018"

[profile.release]
lto = true          # Enable Link Time Optimization

[dependencies]
# Used for the many situations in which multiple integer types are supported: e.g, parsing, variables.
num-traits = "0.2.14"

# For error handling.
anyhow = "1.0"

# For nice terminal output.
colored = "2"

# Used in the time module for getting the current time on startup.
chrono = {version="0.4.19", default-features = false, features = ["clock"], optional = true}

[features]
default = ["time"]
time = ["chrono"]
