[workspace]
members = [
    "crates/*",
    "crates/tfm/fuzz",
    "performance",
    "sites/play.texcraft.dev",
    "sites/hyphenate.dev/hyphenate-wasm",
    "sites/knuthplass.dev/knuthplass-wasm",
    "sites/ligkern.dev/ligkern-wasm",
]
resolver = "2"

[workspace.lints.clippy]
collapsible_match = "allow"

[profile.release]
lto = true
