[package]
name = "performance"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
# Performance testing
criterion = "0.3"

[dependencies]
texlang = { path = "../crates/texlang", default-features = false }
texlang-stdlib = { path = "../crates/texlang-stdlib", default-features = false }
rand = "0.8.4"

[[bench]]
name = "digits_of_pi"
harness = false

[[bench]]
name = "lexer_throughput"
harness = false

[[bench]]
name = "primes"
harness = false
