[package]
name = "boxworks-bin"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Boxworks binaries"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
boxworks = {path="../boxworks" }
boxworks-lang = {path="../boxworks-lang" , features = ["ariadne"]}
boxworks-text = {path="../boxworks-text" }
tfm = { path="../tfm" }
core = { path="../core" }

clap = {version="4.3.3", default-features=false, features=["std", "derive"]}
ariadne = {version="0.5.0", default-features = false }

[[bin]]
name = "box"
path = "src/box.rs"

[dev-dependencies]
assert_cmd = "2.0.12"
similar-asserts = "1.5.0"
