[package]
name = "boxworks-hyphenate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hyphenation in the Boxworks engine"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
# Texcraft
hyphenate = { path = "../hyphenate" }
boxworks = { path = "../boxworks" }

[dev-dependencies]
boxworks-testing = {path="../boxworks-testing"}
tfm = { path = "../tfm" }
boxworks-text = { path = "../boxworks-text" }

[lints]
workspace = true
