[package]
name = "boxworks-testing"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
boxworks = { path = "../boxworks", features=["ariadne"] }
common = { path = "../common" }
pretty_assertions = {version = "1.4.1" }
ariadne = {version="0.5.0", default-features = false }
