[package]
name = "boxworks-tex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tools for converting TeX's internal data structures to Boxworks"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
boxworks = { path = "../boxworks" }
boxworks-knuthplass = { path = "../boxworks-knuthplass" }
common = { path = "../common" }
