[package]
name = "boxworks"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The Knuth/TeX typesetting engine"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
common = { path = "../common", features=[] }
ariadne = {version="0.5.0", default-features = false, optional = true}
tempfile = {version="3", optional=true}

[dev-dependencies]
pretty_assertions = {version = "1.4.1" }

[features]
default = []
ariadne = ["dep:ariadne"]
tempfile = ["dep:tempfile"]

[lints]
workspace = true
