[package]
name = "core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types and abstractions used in Texcraft"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
serde = {version="^1.0", optional = true}

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]
