[package]
name = "core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types and abstractions used in Texcraft"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
serde = {version="^1.0", optional = true}

[features]
default = []
serde = ["dep:serde"]
