[package]
name = "hyphenate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of hte hyphenation algorithm in TeX"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]

[features]

[lints]
workspace = true
