[package]
name = "hyphenate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of hte hyphenation algorithm in TeX"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dev-dependencies]
pretty_assertions = {version = "1.4.1" }

[features]

[lints]
workspace = true
