[package]
name = "texcraft-playground"
version = "0.0.0"
authors = ["Texcraft contributors"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
texlang-core = { path = "../../crates/texlang-core", default-features = false }
texlang-stdlib = { path = "../../crates/texlang-stdlib", default-features = false }
web-sys = {version = "0.3.22", features = ["console"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
