[package]
name = "texcraft-formats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tftopl"
path = "bin/tftopl.rs"

[[bin]]
name = "pltotf"
path = "bin/pltotf.rs"

[[bin]]
name = "plfmt"
path = "bin/plfmt.rs"
required-features = ["binary"] 

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }

[features]
binary = ["clap"]
