[package]
name = "texcraft-stdext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for diffing strings in the spell check module.
colored = "2"

serde = {features = ["derive"], version="^1.0", optional = true}

[dev-dependencies]
serde_json = "1.0"


[features]
default = []
serde = ["dep:serde"]
