[package]
name = "texcraft-stdext"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust data structures and algorithms used in the Texcraft project"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["texcraft"]
categories = ["algorithms", "data-structures"]

[dependencies]
# Used for diffing strings in the spell check module.
colored = "2"

serde = {features = ["derive"], version="^1.0", optional = true}

[dev-dependencies]
serde_json = "1.0"


[features]
default = []
serde = ["dep:serde"]
