[package]
name = "texcraft"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A meta crate"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
texcraft-stdext = { path = "../texcraft-stdext", version = "0.1.0" }
texlang = { path = "../texlang", version = "0.1.0" }
texlang-stdlib = { path = "../texlang-stdlib", version = "0.1.0" }
