[package]
name = "texcraft"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A crate of binaries from the Texcraft project"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
clap = {version="4.3.3", default-features=false, features=["std", "derive"]}
rand = "0.8.4"
rmp-serde = {version="^1.0"}
serde_json = {version="1.0"} 
serde = {version="1.0"} 

core = { path = "../core" }
texlang = { path = "../texlang", features=["serde"] }
tfm = { path = "../tfm" }
texlang-common = { path = "../texlang-common" }
texlang-font = { path = "../texlang-font", features = ["serde"]}
texlang-stdlib = { path = "../texlang-stdlib", features = ["repl", "serde", "time"]}
texcraft-stdext = { path = "../texcraft-stdext", features = ["serde"] }
performance = {path = "../../performance"}

[[bin]]
name = "texcraft"
path = "src/texcraft.rs"

[[bin]]
name = "randtex"
path = "src/randtex.rs"
