[package]
name = "texlang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Nice terminal output.
colored = "2"

once_cell = "1.17.1"
serde = {features = ["derive"], version="^1.0", optional = true}

texcraft-stdext = { path = "../texcraft-stdext" }

[features]
default = []
serde = ["dep:serde"]
