[package]
name = "texlang-font"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Texlang fonts integration"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[dependencies]
# Texcraft
core = { path = "../core" }
texlang = { path = "../texlang" }
texlang-common = { path = "../texlang-common" }
texlang-stdlib = { path = "../texlang-stdlib", default-features=false, features=[] }

# Third-party
serde = {version="^1.0", optional = true}

[dev-dependencies]
texlang-testing = { path = "../texlang-testing" }
texcraft-stdext = { path = "../texcraft-stdext" }

[features]
serde = ["dep:serde", "texlang-testing/serde", "texlang-stdlib/serde" ]
