[package]
name = "texlang-stdlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "texlang-all-errors"
path = "bin/errors.rs"

[dependencies]

# In the time module for getting the current time on startup.
chrono = {version="0.4.19", default-features = false, features = ["clock"], optional = true}

linefeed = {version = "0.6", optional = true}

texcraft-stdext = { path = "../texcraft-stdext" }
texlang-core = { path = "../texlang-core" }

# Nice terminal output.
colored = "2"

serde_json = {version="1.0", optional = true}
serde = {version="^1.0", optional = true}

[features]
default = ["time"]
time = ["dep:chrono"]
repl = ["dep:linefeed"]
serde = ["dep:serde", "dep:serde_json", "texcraft-stdext/serde", "texlang-core/serde"]
