[package]
name = "texlang-stdlib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The Texlang standard library of TeX primitives"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]

[[bin]]
name = "texlang-all-errors"
path = "bin/errors.rs"

[dependencies]

# In the time module for getting the current time on startup.
chrono = {version="0.4.19", default-features = false, features = ["clock"], optional = true}

linefeed = {version = "0.6", optional = true}

texcraft-stdext = { path = "../texcraft-stdext", version = "0.1.0" }
texlang = { path = "../texlang", version="0.1.0" }

# Nice terminal output.
colored = "2"

serde = {version="^1.0", optional = true}
serde_json = {version="1.0", optional = true}
rmp-serde = {version="^1.0", optional = true}
bincode = {version="2.0.0-rc.3", default-features = false, features = ["alloc", "serde"]}

[features]
default = ["time"]
time = ["dep:chrono"]
repl = ["dep:linefeed"]
serde = ["dep:serde", "dep:serde_json", "dep:rmp-serde", "texcraft-stdext/serde", "texlang/serde"]
