[package]
name = "texlang"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Texlang: A TeX language interpreter"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]
categories = ["compilers"]

[dependencies]
# Nice terminal output.
colored = "2"

once_cell = "1.17.1"
serde = {features = ["derive"], version="^1.0", optional = true}
core = { path="../core" }
texcraft-stdext = { path = "../texcraft-stdext", version = "0.1.0" }

[features]
default = []
serde = ["dep:serde", "texcraft-stdext/serde", "core/serde"]
