[package]
name = "texlang"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Texlang: A TeX language interpreter"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]
categories = ["compilers"]

[dependencies]
# Texcraft
core = { path="../core" }
texcraft-stdext = { path = "../texcraft-stdext" }

# Third-party
colored = { version="3" }
serde = {features = ["derive"], version="^1.0", optional = true}

[features]
default = []
serde = ["dep:serde", "texcraft-stdext/serde", "core/serde"]
