[package]
name = "tfm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parsers for the TeX font metric (.tfm) and property list (.pl) file formats"
homepage = "https://texcraft.dev"
repository = "https://github.com/jamespfennell/texcraft"
keywords = ["tex", "texcraft"]
categories = ["parser-implementations"]

[dependencies]
ariadne = {version="0.3.0", default-features = false, optional = true}
arbitrary = { version = "1", features = ["derive"], optional = true }

[features]
ariadne = ["dep:ariadne"]
arbitrary = ["dep:arbitrary"]
